--- a/client/css/style.css
+++ b/client/css/style.css
@@ -7,7 +7,7 @@
 #sidebar-wrapper{
     overflow-y: auto;
     /* width: 100%; */
-    height: 78vh;
+    height: 77.7vh;
     overflow-x: hidden;
    }
 
@@ -19,9 +19,9 @@
        margin-left:10px;
    }
 
-   .fas, .far{
+   .fas, .far, .fa{
        color:white;
-       font-size:22px;
+       font-size:20px;
    }
 
    .searching{
@@ -50,3 +50,4 @@
        font-size: 16px;
        justify-content: center;
    }
+
